--- a/AnomalyDetection.ipynb
+++ b/AnomalyDetection.ipynb
@@ -3526,7 +3526,7 @@
     {
       "cell_type": "markdown",
       "source": [
-        "# Evaluation"
+        "# Testing"
       ],
       "metadata": {
         "id": "dDjWDGVTh6e6"
